# raspberry-pi-sensors

./: .gitignore  Makefile  README.md  build.sh  clean.sh  crc.h  main.c  save-buildroot-config.sh  shared.sh
.github/workflows/: github-actions.yml
bmp280/: bmp280.c  bmp280.h
buildroot_external/: Config.in  external.desc  external.mk
buildroot_external/configs/: rpi_sensors_defconfig
buildroot_external/rootfs_overlay/boot/: config.txt
buildroot_external/rootfs_overlay/etc/init.d/: S02keyboard  S50wifi  S99rpi_sensors  S99rpi_web_app
buildroot_external/scripts/: post-image.sh
htu21d/: htu21d.c  htu21d.h
i2c/: i2c.c  i2c.h
rpi_sensors/: Makefile  crc.h  main.c
rpi_sensors/db/: db.c  db.h
rpi_sensors/htu21d/: htu21d.h
rpi_sensors/sqlite-autoconf-3490100/: sqlite_cfg.h
rpi_sensors/sqlite-autoconf-3490100/aarch64/lib/pkgconfig/: sqlite3.pc
rpi_web_app/: Cargo.toml  app.py
rpi_web_app/src/: main.rs
rpi_web_app/templates/: index.html
sqlite-autoconf-3490100/: Makefile
web/: app.py
web/templates/: index.html
