[package]
name = "rpi_web_server"
version = "0.1.0"
authors = ["Marwan SMOUNI <marwan-smouni@hotmail.fr>"]
description = "A simple web server for Raspberry Pi"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
